project/force-app/main/default/objects/Contract/fields/Total_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Price__c</fullName>
    <description>TTTM:
- Tổng Phí Dịch vụ = Tổng PDV+ Tổng Đơn Giá PDV*Diện Tích (của Hợp Đồng)
KPTM:
- Thuê Ngoài Trời = Check =&gt;  Tổng Phí Dịch vụ = Tổng PDV+ Tổng Đơn Giá PDV* (Diện Tích Đất Sử Dụng + Diện Tích Ngoài Trời)
- Thuê Ngoài Trời = UnCheck =&gt;  Tổng Phí Dịch vụ = Tổng PDV+ Tổng Đơn Giá PDV* Diện Tích Đất Sử Dụng</description>
    <label>Total Service Price</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>