project/force-app/main/default/objects/Contract/fields/Total_Service_Price_Line__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Price_Line__c</fullName>
    <description>Tổng Giá Trên Line của các Line, có:
- Loại Điều Kiện = V004
- Kiểu Tính Giá = Fixed Amount</description>
    <label>Total Service Price (Line)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>