project/force-app/main/default/objects/Contract/fields/Total_Unit_Outdoor_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Outdoor_Price__c</fullName>
    <description>Tổng Giá Trên Line của các Line, có:
- Loại Điều Kiện  = S100
- Kiểu Tính Giá khác Fixed Amount</description>
    <label>Total Unit Outdoor Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>