project/force-app/main/default/objects/Contract/fields/Total_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price__c</fullName>
    <description>Tổng Đơn Giá Giá Thuê  = Tổng Tổng Đơn Giá Giá Thuê  trên Contract Line, Có Condition Type = V001  hoặc V020</description>
    <label>Total Unit Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>