project/force-app/main/default/objects/Contract/fields/Total_Unit_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Service_Price__c</fullName>
    <description>Tổng Đơn Giá PDV  = Tổng Tổng Đơn Giá Thuê trên Contract Line, Có Conditon Type = V004</description>
    <label>Total Unit Service Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>