project/force-app/main/default/objects/Contract/recordTypes/Ad_Lease.recordType-meta.xml
<RecordType>
    <fullName>Ad_Lease</fullName>
    <active>true</active>
    <label>Ad Lease</label>
</RecordType>