project/force-app/main/default/objects/Contract/recordTypes/New_Lease_KPTM.recordType-meta.xml
<RecordType>
    <fullName>New_Lease_KPTM</fullName>
    <active>true</active>
    <label>New Lease KPTM</label>
</RecordType>