project/force-app/main/default/objects/Contract/recordTypes/New_Lease_TTTM.recordType-meta.xml
<RecordType>
    <fullName>New_Lease_TTTM</fullName>
    <active>true</active>
    <label>New Lease TTTM</label>
</RecordType>